// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GridColumn /> renders <GridColumn /> component 1`] = `
.emotion-0 {
  box-sizing: border-box;
  padding: 8px calc(8px/2) 0 calc(8px/2);
  -webkit-flex-basis: calc(100% / (12/12));
  -ms-flex-preferred-size: calc(100% / (12/12));
  flex-basis: calc(100% / (12/12));
  width: calc(100% / (12/12));
  max-width: calc(100% / (12/12));
}

@media screen and (min-width:576px) {
  .emotion-0 {
    padding: 16px calc(16px/2) 0 calc(16px/2);
  }
}

@media screen and (min-width:992px) {
  .emotion-0 {
    padding: 24px calc(24px/2) 0 calc(24px/2);
  }
}

@media screen and (min-width:1200px) {
  .emotion-0 {
    padding: 32px calc(32px/2) 0 calc(32px/2);
  }
}

<div>
  <div
    class="emotion-0"
  >
    column
  </div>
</div>
`;

exports[`<GridColumn /> renders <GridColumn /> in size 4 and medium 3 and large 2 and huge 1 1`] = `
.emotion-0 {
  box-sizing: border-box;
  padding: 8px calc(8px/2) 0 calc(8px/2);
  -webkit-flex-basis: calc(100% / (12/4));
  -ms-flex-preferred-size: calc(100% / (12/4));
  flex-basis: calc(100% / (12/4));
  width: calc(100% / (12/4));
  max-width: calc(100% / (12/4));
}

@media screen and (min-width:576px) {
  .emotion-0 {
    padding: 16px calc(16px/2) 0 calc(16px/2);
    width: calc(100% / (12/3));
    -webkit-flex-basis: calc(100% / (12/3));
    -ms-flex-preferred-size: calc(100% / (12/3));
    flex-basis: calc(100% / (12/3));
    max-width: calc(100% / (12/3));
  }
}

@media screen and (min-width:992px) {
  .emotion-0 {
    padding: 24px calc(24px/2) 0 calc(24px/2);
    width: calc(100% / (12/2));
    -webkit-flex-basis: calc(100% / (12/2));
    -ms-flex-preferred-size: calc(100% / (12/2));
    flex-basis: calc(100% / (12/2));
    max-width: calc(100% / (12/2));
  }
}

@media screen and (min-width:1200px) {
  .emotion-0 {
    padding: 32px calc(32px/2) 0 calc(32px/2);
    width: calc(100% / (12/1));
    -webkit-flex-basis: calc(100% / (12/1));
    -ms-flex-preferred-size: calc(100% / (12/1));
    flex-basis: calc(100% / (12/1));
    max-width: calc(100% / (12/1));
  }
}

<div>
  <div
    class="emotion-0"
  >
    column
  </div>
</div>
`;

exports[`<GridColumn /> renders <GridColumn /> in size 4, offsets: 4 and medium 3 and large 2 and huge 1 1`] = `
.emotion-0 {
  box-sizing: border-box;
  padding: 8px calc(8px/2) 0 calc(8px/2);
  -webkit-flex-basis: calc(100% / (12/4));
  -ms-flex-preferred-size: calc(100% / (12/4));
  flex-basis: calc(100% / (12/4));
  width: calc(100% / (12/4));
  max-width: calc(100% / (12/4));
  margin-left: calc(100% / (12/4));
}

@media screen and (min-width:576px) {
  .emotion-0 {
    padding: 16px calc(16px/2) 0 calc(16px/2);
    margin-left: calc(100% / (12/3));
  }
}

@media screen and (min-width:992px) {
  .emotion-0 {
    padding: 24px calc(24px/2) 0 calc(24px/2);
    margin-left: calc(100% / (12/2));
  }
}

@media screen and (min-width:1200px) {
  .emotion-0 {
    padding: 32px calc(32px/2) 0 calc(32px/2);
    margin-left: calc(100% / (12/1));
  }
}

<div>
  <div
    class="emotion-0"
  >
    column
  </div>
</div>
`;
